--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+@import "tailwindcss";
 
 :root {
   --primary-color: #2c2d4b;
   --secondary-color: #0b0821;
+}
+@theme {
+  --color-primary: #2c2d4b;
+  --color-secondary: #0b0821;
 }
