--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --primary-color: #2c2d4b;
   --secondary-color: #0b0821;
 }
+
 @theme {
   --color-primary: #2c2d4b;
   --color-secondary: #0b0821;
@@ -11,4 +12,8 @@
 
 body {
   background-color: var(--primary-color);
+}
+
+.h-screen {
+  height: 74.4vh;
 }
