--- a/src/Components/Description/description.css
+++ b/src/Components/Description/description.css
@@ -7,6 +7,16 @@
     background-color: white;
     padding: 2rem 0 2rem 0;
     text-align: center;
-    width: 50%;
+    width: 300px;
     margin: 3rem auto 2rem auto;
+
+    h1 {
+        padding: 1rem 1rem 0;
+    }
+}
+
+@media (min-width: 992px) {
+    .description_container {
+        width: 80%;
+    }
 }
