--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -15,6 +15,9 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 
   p {
     padding-left: 1rem;
