--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -13,6 +13,9 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 32px;
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 
 .logo {
