--- a/src/Components/Description/description.css
+++ b/src/Components/Description/description.css
@@ -8,7 +8,7 @@
     padding: 2rem 0 2rem 0;
     text-align: center;
     width: 80%;
-    margin: 3rem auto 2rem auto;
+    margin: 3rem auto 0 auto;
 
     h1 {
         padding: 1rem 1rem 0;
